# vAmigaNet

./: .gitignore  localhost-key.pem  localhost.pem  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
cpp/: CMakeLists.txt  Proxy.cpp  Proxy.h
cpp/emulator/: CMakeLists.txt  VAmiga.cpp  VAmiga.h  config.h
cpp/emulator/Infrastructure/: MsgQueue.cpp  MsgQueue.h
src/: app.css  app.d.ts  app.html
src/lib/: Emulator.svelte  GLCanvas.svelte  Guru.svelte  Impressum.svelte  MainScreen.svelte  Proxy.svelte  RomViewer.svelte  TitleScreen.svelte  stores.ts  types.ts
src/lib/DropZone/: DropZone.svelte  DropZoneCell.svelte
src/lib/Globals/: Audio.svelte  Config.svelte  GamepadManager.svelte
src/lib/Settings/: AudioSettings.svelte  CompSettings.svelte  ConfigCategory.svelte  ConfigItem.svelte  ConfigSection.svelte  GeneralSettings.svelte  MachineSettings.svelte  Settings.svelte  VideoSettings.svelte
src/lib/Showcases/: Carousel.svelte  CarouselItem.svelte  Sedcard.svelte  Showcases.svelte  database.ts
src/lib/Sidebar/: Sidebar.svelte  SidebarButton.svelte  SidebarSection.svelte
src/lib/Statusbar/: BarBox.svelte  FloppyDriveInfo.svelte  HardDriveInfo.svelte  Speedometer.svelte  StatusBar.svelte  StatusIcon.svelte  WarpControl.svelte
src/lib/Utils/: FileDialog.svelte
src/lib/Widgets/: Checkmark.svelte  Chevron.svelte  Logo.svelte  MainPageLink.svelte  Menu.svelte  SelectMenu.svelte  Slider.svelte
src/routes/: +layout.svelte  +page.svelte
static/: vAmiga.js
